--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "owner": "viniciusmoreria",
     "privacy": "public",
     "primaryColor": "#16171B",
-    "version": "2.1.0",
+    "version": "2.1.1",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
     "backgroundColor": "#16171B",
@@ -24,11 +24,14 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.viniciusmoreria.liftoff",
       "googleServicesFile": "./src/libs/firebase/GoogleService-Info.plist",
-      "buildNumber": "2.1.0",
+      "buildNumber": "2.1.3",
       "config": {
         "usesNonExemptEncryption": false
       },
-      "appStoreUrl": "https://apps.apple.com/us/app/liftoff/id1645685152"
+      "appStoreUrl": "https://apps.apple.com/us/app/liftoff/id1645685152",
+      "infoPlist": {
+        "LSApplicationQueriesSchemes": ["itms-apps"]
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -38,7 +41,7 @@
       "package": "com.viniciusmoreria.liftoff",
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.viniciusmoreria.liftoff",
       "googleServicesFile": "./src/libs/firebase/google-services.json",
-      "versionCode": 460020301
+      "versionCode": 460020302
     },
     "notification": {
       "icon": "./src/assets/push-icon.png",
