--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-fast-image": "^8.6.1",
     "react-native-flash-message": "^0.3.1",
     "react-native-flipper": "^0.164.0",
     "react-native-gesture-handler": "~2.5.0",
