--- a/app.json
+++ b/app.json
@@ -85,5 +85,10 @@
       "@react-native-firebase/perf",
       "sentry-expo"
     ]
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-4500374559312974~8821018551",
+    "ios_app_id": "ca-app-pub-4500374559312974~6118795609",
+    "user_tracking_usage_description": "This identifier will be used to deliver personalized ads to you."
   }
 }
