--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-flash-message": "^0.3.1",
     "react-native-flipper": "^0.164.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-google-mobile-ads": "^8.2.2",
     "react-native-maps": "^1.3.2",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
