--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,3 +88,9 @@ jobs:
 
       - name: Build on EAS
         run: eas build --profile production --platform all --non-interactive --no-wait --auto-submit
+
+      - name: Update dev branch
+        run: |
+          git checkout dev
+          git merge --no-ff main
+          git push
