--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "2.4.1",
   "main": "index.js",
   "scripts": {
-    "start": "expo start -c",
-    "android": "expo start -c --android",
-    "ios": "expo start -c --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "dev": "expo start --dev-client --force-manifest-type=classic -c",
     "web": "expo start --web",
     "eject": "expo eject",
@@ -43,7 +43,7 @@
     "@tanstack/react-query": "^4.2.3",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
-    "expo": "~46.0.13",
+    "expo": "~46.0.21",
     "expo-application": "~4.2.2",
     "expo-build-properties": "~0.3.0",
     "expo-community-flipper": "^46.0.1",
@@ -63,7 +63,7 @@
     "nativewind": "^2.0.10",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.9",
     "react-native-fast-image": "^8.6.1",
     "react-native-flash-message": "^0.3.1",
     "react-native-flipper": "^0.164.0",
