--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACTION_TOKEN }}
 
       - name: Set up git user
         run: |
@@ -96,9 +95,3 @@ jobs:
 
       - name: Build on EAS
         run: eas build --profile production --platform all --non-interactive --no-wait --auto-submit
-
-      - name: Update dev branch
-        run: |
-          git checkout dev
-          git merge --no-ff main
-          git push
