--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: Update dev branch
         run: |
+          git fetch --all
           git checkout dev
           git merge --no-ff main
           git push
