--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Update dev branch
         run: |
-          git fetch --all --unshallow
+          git fetch origin
           git stash
           git checkout dev
           git merge main
