--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches:
       - dev
+    paths-ignore:
+      - README.md
+      - CHANGELOG.md
+      - app.json
+      - package.json
 
 concurrency:
   group: staging-${{ github.event_name }}-${{ github.ref }}
