--- a/app.json
+++ b/app.json
@@ -56,7 +56,8 @@
       "package": "com.viniciusmoreria.liftoff",
       "playStoreUrl": "https://play.google.com/store/apps/details?id=com.viniciusmoreria.liftoff",
       "versionCode": 500030100,
-      "googleServicesFile": "./src/libs/firebase/google-services.json"
+      "googleServicesFile": "./src/libs/firebase/google-services.json",
+      "permissions": ["com.android.vending.BILLING"]
     },
     "notification": {
       "icon": "./assets/push-icon.png",
