--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-maps": "1.10.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-purchases": "^7.27.1",
+    "react-native-purchases-ui": "^7.27.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
