--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
     "expo-image-picker": "~14.7.1",
+    "expo-insights": "~0.6.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-localization": "~14.8.3",
@@ -65,7 +66,6 @@
     "react-native-maps": "1.10.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-purchases": "^7.27.1",
-    "react-native-purchases-ui": "^7.27.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
