--- a/package.json
+++ b/package.json
@@ -19,60 +19,60 @@
   "dependencies": {
     "@amplitude/react-native": "^2.17.3",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "~14.0.4",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@react-native-firebase/analytics": "^19.1.1",
-    "@react-native-firebase/app": "^19.1.1",
-    "@react-native-firebase/auth": "^19.1.1",
-    "@react-native-firebase/firestore": "^19.1.1",
-    "@react-native-firebase/messaging": "^19.1.1",
-    "@react-native-firebase/perf": "^19.1.1",
-    "@react-navigation/drawer": "^6.6.15",
-    "@react-navigation/native": "^6.1.7",
-    "@sentry/react-native": "~5.20.0",
-    "@shopify/react-native-skia": "^1.2.3",
+    "@react-native-firebase/analytics": "^20.5.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
+    "@react-native-firebase/messaging": "^20.5.0",
+    "@react-native-firebase/perf": "^20.5.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@sentry/react-native": "~6.10.0",
     "@tanstack/query-sync-storage-persister": "^5.28.9",
     "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-query-persist-client": "^5.28.9",
     "axios": "^1.6.8",
     "date-fns": "~2.29.2",
-    "expo": "~50.0.7",
-    "expo-build-properties": "~0.11.1",
-    "expo-constants": "~15.4.5",
-    "expo-dev-client": "~3.3.11",
-    "expo-device": "~5.9.4",
-    "expo-font": "~11.10.3",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-insights": "~0.6.1",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-localization": "~14.8.3",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-notifications": "~0.27.6",
-    "expo-router": "~3.4.10",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-updates": "~0.24.12",
-    "expo-web-browser": "~12.8.2",
+    "expo": "~52.0.0",
+    "expo-build-properties": "~0.13.3",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-device": "~7.0.3",
+    "expo-font": "~13.0.4",
+    "expo-image": "~2.0.7",
+    "expo-image-picker": "~16.0.6",
+    "expo-insights": "~0.8.2",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
+    "expo-modules-core": "~2.2.3",
+    "expo-navigation-bar": "~4.0.9",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
+    "expo-web-browser": "~14.0.2",
     "i18next": "^23.11.3",
+    "lottie-react-native": "7.1.0",
     "moti": "^0.28.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^14.1.1",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-mmkv": "^2.12.2",
-    "react-native-purchases": "^7.27.1",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-purchases": "^9.0.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-skottie": "^2.1.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4",
+    "react-native-webview": "13.12.5",
     "react-native-youtube-iframe": "^2.3.0",
     "zustand": "^4.5.2"
   },
@@ -82,13 +82,13 @@
     "@testing-library/react": "^14.2.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "eslint-config-universe": "^12.0.0",
     "jest": "^29.3.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~52.0.6",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "reactotron-react-native": "^5.1.6",
@@ -97,24 +97,13 @@
     "standard-version-expo": "^1.0.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native"
   },
   "resolutions": {
-    "expo-modules-core": "~1.11.0",
     "standard-version-expo/**/@expo/config-plugins": "7.8.0"
-  },
-  "overrides": {
-    "expo-modules-core": "~1.11.0"
-  },
-  "expo": {
-    "install": {
-      "exclude": [
-        "react-native-safe-area-context"
-      ]
-    }
   },
   "private": true
 }
